@@ -132,6 +132,10 @@
 <!ENTITY DBE_get_tx_max "<ulink url='&bdb;env_set_tx_max.html'><function>DB_ENV-&gt;get_tx_max</function></ulink>">
 <!ENTITY DBE_set_tx_timestamp "<ulink url='&bdb;env_set_tx_timestamp.html'><function>DB_ENV-&gt;set_tx_timestamp</function></ulink>">
 <!ENTITY DBE_get_tx_timestamp "<ulink url='&bdb;env_set_tx_timestamp.html'><function>DB_ENV-&gt;get_tx_timestamp</function></ulink>">
+<!ENTITY DBE_set_tas_spins "<ulink url='&bdb;env_set_tas_spins.html'><function>DB_ENV-&gt;set_tas_spins</function></ulink>">
+<!ENTITY DBE_get_tas_spins "<ulink url='&bdb;env_set_tas_spins.html'><function>DB_ENV-&gt;get_tas_spins</function></ulink>">
+<!ENTITY DBE_set_shm_key "<ulink url='&bdb;env_set_shm_key.html'><function>DB_ENV-&gt;set_shm_key</function></ulink>">
+<!ENTITY DBE_get_shm_key "<ulink url='&bdb;env_set_shm_key.html'><function>DB_ENV-&gt;get_shm_key</function></ulink>">
 <!ENTITY DBE_txn_checkpoint "<ulink url='&bdb;txn_checkpoint.html'><function>DB_ENV-&gt;txn_checkpoint</function></ulink>">
 <!ENTITY db_create "<ulink url='&bdb;db_create.html'><function>db_create</function></ulink>">
 <!ENTITY DB_close "<ulink url='&bdb;db_close.html'><function>DB-&gt;close</function></ulink>">
@@ -157,8 +161,6 @@
 <!ENTITY TXN_id "<ulink url='&bdb;txn_id.html'><function>DB_TXN-&gt;id</function></ulink>">
 <!ENTITY TXN_prepare "<ulink url='&bdb;txn_prepare.html'><function>DB_TXN-&gt;prepare</function></ulink>">
 <!ENTITY TXN_set_timeout "<ulink url='&bdb;txn_set_timeout.html'><function>DB_TXN-&gt;set_timeout</function></ulink>">
-<!ENTITY DBE_set_tx_max "<ulink url='&bdb;env_txn_set_tx_max.html'><function>DB_ENV-&gt;set_tx_max</function></ulink>">
-<!ENTITY DBE_set_tx_timestamp "<ulink url='&bdb;env_txn_set_tx_timestamp.html'><function>DB_ENV-&gt;set_tx_timestamp</function></ulink>">
 <!ENTITY DBE_txn_chackpoint "<ulink url='&bdb;txn_txn_chackpoint.html'><function>DB_ENV-&gt;txn_chackpoint</function></ulink>">
 <!ENTITY DBE_txn_recover "<ulink url='&bdb;txn_txn_recover.html'><function>DB_ENV-&gt;txn_recover</function></ulink>">
 <!ENTITY DBE_txn_stat "<ulink url='&bdb;txn_txn_stat.html'><function>DB_ENV-&gt;txn_stat</function></ulink>">
