@@ -45,15 +45,16 @@
 <section id="bdb-environment-config"><title>Environment Configuration</title>
 
 <variablelist>
-<varlistentry><term><literal role="sexp">(BDB:ENV-SET-OPTIONS dbe &key-amp;
-   TX_TIMESTAMP TX_MAX DATA_DIR TMP_DIR AUTO_COMMIT CDB_ALLDB DIRECT_DB
-   DIRECT_LOG NOLOCKING NOMMAP NOPANIC OVERWRITE PANIC_ENVIRONMENT
-   REGION_INIT TXN_NOSYNC TXN_WRITE_NOSYNC YIELDCPU VERB_CHKPOINT
-   VERB_DEADLOCK VERB_RECOVERY VERB_REPLICATION VERB_WAITSFOR
-   VERBOSE)</literal></term>
+<varlistentry><term><literal role="sexp">(BDB:ENV-SET-OPTIONS dbe
+   &key-amp; SHM_KEY TAS_SPINS TX_TIMESTAMP TX_MAX DATA_DIR TMP_DIR
+   AUTO_COMMIT CDB_ALLDB DIRECT_DB DIRECT_LOG NOLOCKING NOMMAP NOPANIC
+   OVERWRITE PANIC_ENVIRONMENT REGION_INIT TXN_NOSYNC TXN_WRITE_NOSYNC
+   YIELDCPU VERB_CHKPOINT VERB_DEADLOCK VERB_RECOVERY VERB_REPLICATION
+   VERB_WAITSFOR VERBOSE)</literal></term>
  <listitem><simpara>Set some environment options using &DBE_set_flags;,
    &DBE_set_verbose;, &DBE_set_tmp_dir;, &DBE_set_data_dir;,
-   &DBE_set_tx_max;, &DBE_set_tx_timestamp;.
+   &DBE_set_tx_max;, &DBE_set_tx_timestamp;, &DBE_set_tas_spins;,
+   &DBE_set_shm_key;.
 </simpara></listitem></varlistentry>
 <varlistentry><term><literal role="sexp">(BDB:ENV-GET-OPTIONS dbe
    &optional-amp; what)</literal></term>
@@ -99,9 +100,15 @@
      <listitem><simpara>a &boolean-t; indicator of whether this
        option is set or not (&DBE_get_verbose; and &DBE_get_flags;).
     </simpara></listitem></varlistentry>
+    <varlistentry><term><constant>:TAS_SPINS</constant></term>
+     <listitem><simpara>the number of test-and-set spins
+       (&DBE_get_tas_spins;).</simpara></listitem></varlistentry>
+    <varlistentry><term><constant>:SHM_KEY</constant></term>
+     <listitem><simpara>base segment ID for shared memory regions
+       (&DBE_get_shm_key;).</simpara></listitem></varlistentry>
     <varlistentry><term><constant>:DB_XIDDATASIZE</constant></term>
      <listitem><simpara>the &length; of the globally unique
-       &unsigned-byte-vector; which must be passed to &TXN_prepare;.
+       &unsigned-byte-vec; which must be passed to &TXN_prepare;.
     </simpara></listitem></varlistentry>
     <varlistentry><term><constant>:HOME</constant></term>
      <listitem><simpara>the home directory (when open) or &t;.
